tests/NormalTests/paczka1/small_fuzzy/72858697.err
Error in line 5: 8x2 A998 64,2
Error in line 4: 1hBg8g6jM4 A112 44,7
